@@ -1,4 +1,6 @@
 version 0.99.5 (not yet released)
+	   * add "is_land" method to check whether a point is over land or
+             water.
 	   * geos-3.1.1 now required. 3.1.1 source included (instead of 2.2.3).
            * shiftgrid no longer requires a cyclic point to be present
              (patch from Eric Bruning).
